[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "pybritive"
authors = [{name = "Britive Inc.", email = "support@britive.com"}]
description = "A pure Python CLI for Britive"
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet",
    "Topic :: Security",
    "Topic :: Utilities",
]
license = {file = "LICENSE"}
requires-python = ">= 3.9"
dependencies = [
    "britive~=4.0",
    "click>=8.1.7",
    "colored",
    "cryptography",
    "jmespath",
    "merge-args",
    "pyjwt",
    "python-dateutil",
    "PyYAML",
    "requests>=2.31.0",
    "tabulate",
    "toml"
]
dynamic = ["version"]
keywords = ["britive", "cpam", "identity", "jit", "cli"]

[project.optional-dependencies]
openshift = ["beautifulsoup4"]
aws = ["boto3"]

[project.scripts]
pybritive = "pybritive.cli_interface:safe_cli"
pybritive-aws-cred-process = "pybritive.helpers.aws_credential_process:main"
pybritive-kube-exec = "pybritive.helpers.k8s_exec:main"

[project.urls]
Homepage = "https://www.britive.com"
Documentation = "https://britive.github.io/python-cli/"
Repository = "https://github.com/britive/python-cli.git"
Issues = "https://github.com/britive/python-cli/issues"
Changelog = "https://github.com/britive/python-cli/blob/main/CHANGELOG.md"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = {attr = "pybritive.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pymarkdown]
plugins.md013.line_length = 120
plugins.md013.code_block_line_length = 120

[tool.ruff]
include = ["pyproject.toml", "src/**/*.py", "tests/*.py"]
line-length = 120

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = [
    "E", # pycodestyle
    "F", # Pyflakes
    "I", # isort
    "PL", #pylint
    "SIM", # flake8-simplify
]

[tool.ruff.lint.pylint]
allow-magic-value-types = ["int", "str"]
max-args = 18
max-branches = 30
max-returns = 8
max-statements = 72
