[metadata]
name = pybritive
version = 0.1.2
author = Britive Inc.
author_email = support@britive.com
description = A pure Python CLI for Britive
long_description = file: README.md
long_description_content_type = text/markdown
url = https://www.britive.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    click
    requests
    PyYAML
    merge_args
    tabulate
    toml
    cryptography
    britive @ https://github.com/britive/python-sdk/releases/download/v2.7.0/britive-2.7.0.tar.gz#egg=britive-2.7.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pybritive = pybritive.cli_interface:safe_cli