[metadata]
name = pybritive
version = 0.5.1
author = Britive Inc.
author_email = support@britive.com
description = A pure Python CLI for Britive
long_description = file: README.md
long_description_content_type = text/markdown
url = https://www.britive.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    click
    requests
    PyYAML
    merge_args
    tabulate
    toml
    cryptography
    britive

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pybritive = pybritive.cli_interface:safe_cli
    pybritive-aws-cred-process = pybritive.helpers.aws_credential_process:main