[metadata]
name = pybritive
version = 1.6.1rc3
author = Britive Inc.
author_email = support@britive.com
description = A pure Python CLI for Britive
long_description = file: README.md
long_description_content_type = text/markdown
url = https://www.britive.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

install_requires =
    click
    requests>=2.31.0
    PyYAML
    merge_args
    tabulate
    toml
    cryptography>=41.0.0
    python-dateutil
    britive>=2.23.0
    jmespath
    pyjwt

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pybritive = pybritive.cli_interface:safe_cli
    pybritive-aws-cred-process = pybritive.helpers.aws_credential_process:main
    pybritive-kube-exec = pybritive.helpers.k8s_exec:main